--- a/table1.css
+++ b/table1.css
@@ -3,7 +3,7 @@
   border-collapse: collapse;
   margin-top:50px;
   margin-right:25px;
-  width: 70%;
+  width: 100%;
   overflow:auto;
 }
 
@@ -12,9 +12,10 @@
   padding: 8px;
 }
 
-#table1 tr:nth-child(even){background-color: #f2f2f2;}
+/* #table1 tr:nth-child(even){background-color: #f2f2f2;}
+#table1 tr:nth-child(odd){background-color: #f2f2f2;} */
 
-#table1 tr:hover {background-color: #ddd;}
+#table1 tr:hover {background-color: #7a7a7a25;}
 
 #table1 th {
   padding-top: 12px;
