--- a/form4.css
+++ b/form4.css
@@ -4,8 +4,8 @@
   background-color: #f2f2f2;
   padding:30px;
   padding-left: 60px;
-  width:1175px;
-  float:right;
+  width:80%;
+  margin: 0 auto;
   margin-right:58px;
   margin-top:20px;
   margin-bottom:50px;
