--- a/nav2.css
+++ b/nav2.css
@@ -80,9 +80,9 @@ i {
   margin:0px;
   vertical-align:top;
   width: 100%;
-  height:9%;
+  height:min-content;
   position: fixed;
-  x-index: 1;
+  z-index: 1;
   top: 0;
   left: 0;
   
@@ -114,14 +114,11 @@ i {
 }
 
 div.head {
-width:78%;
+width:100%;
 font-family:Arial;
 background-color:#e6e6e6;
 color:#003366;
-float:right;
-margin-top:80px;
-margin-right:53px;
-margin-left:0px;
+margin-top:100px;
 top: 0;
 right: 0;
 overflow:hidden;
